<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_avisoconfigurações"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="16dp"
        android:text="@string/ConfigPrincipalText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="80dp" />


        <!--RadioGroup destinado ao tipo de mapa -->
    <TextView
        android:id="@+id/typeMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TypeConfigTitle"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <RadioGroup
        android:id="@+id/radioGroupTypeMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeMap">

        <RadioButton
            android:id="@+id/radioButtonMapaVetorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MapaVetorialButton"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButtonMapaSatelite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MapaSateliteButton"
            android:textSize="12sp" />

    </RadioGroup>

    <!--RadioGroup destinado ao direcionamento -->
    <TextView
        android:id="@+id/textViewFormatNavegation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/TypeFormaNavegacao"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupTypeMap" />

    <RadioGroup
        android:id="@+id/radioGroupFormatNavegation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFormatNavegation">

        <RadioButton
            android:id="@+id/radioButtonNorthUP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NorthUPNavegation"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButtonCourseUP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CourseUp"
            android:textSize="12sp" />
    </RadioGroup>

    <Button
        android:id="@+id/ButtonBackConfigToBeginning"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:drawableEnd="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>